--- a/composer.json
+++ b/composer.json
@@ -37,5 +37,11 @@
         "branch-alias": {
             "dev-master": "0.7.x-dev"
         }
-    }
+    },
+    "repositories": [
+      {
+        "url": "https://github.com/kazuj/Gaufrette.git",
+        "type": "git"
+      }
+    ]
 }
