--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ matrix:
     - php: '7.2'
     - php: '7.3'
     - php: '7.4'
-
+    - php: '8.1'
 install:
   - composer update --prefer-dist --no-progress --no-suggest --ansi
 
